fixed overflowing issue for large screen

--- a/css/main.css
+++ b/css/main.css
@@ -566,11 +566,6 @@ video {
   margin-right: auto;
 }
 
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
@@ -579,11 +574,6 @@ video {
 .mx-16{
   margin-left: 4rem;
   margin-right: 4rem;
-}
-
-.my-20{
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 
 .my-2{
@@ -599,11 +589,6 @@ video {
 .mx-8{
   margin-left: 2rem;
   margin-right: 2rem;
-}
-
-.my-24{
-  margin-top: 6rem;
-  margin-bottom: 6rem;
 }
 
 .my-10{
@@ -664,12 +649,28 @@ video {
   margin-right: 1.5rem;
 }
 
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .ml-8{
   margin-left: 2rem;
 }
 
 .ml-4{
   margin-left: 1rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
 }
 
 .mr-16{
@@ -688,36 +689,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-20{
-  margin-top: 5rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
-}
-
-.mb-12{
-  margin-bottom: 3rem;
-}
-
 .block{
   display: block;
 }
 
 .flex{
   display: flex;
-}
-
-.h-screen{
-  height: 100vh;
 }
 
 .h-12{
@@ -734,16 +711,6 @@ video {
 
 .h-4{
   height: 1rem;
-}
-
-.h-fit{
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.w-2\/6{
-  width: 33.333333%;
 }
 
 .w-full{
@@ -778,10 +745,6 @@ video {
   width: 1rem;
 }
 
-.w-2\/5{
-  width: 40%;
-}
-
 .max-w-7xl{
   max-width: 80rem;
 }
@@ -812,10 +775,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.overflow-hidden{
-  overflow: hidden;
 }
 
 .rounded{
@@ -887,11 +846,6 @@ video {
   padding-right: 10rem;
 }
 
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -910,16 +864,12 @@ video {
   padding-left: 0.5rem;
 }
 
-.pt-20{
-  padding-top: 5rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
 .pb-8{
   padding-bottom: 2rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .pt-10{
@@ -1058,18 +1008,6 @@ input, select, textarea, ::placeholder {
 }
 
 @media (min-width: 976px){
-  .lg\:w-8\/12{
-    width: 66.666667%;
-  }
-
-  .lg\:w-3\/5{
-    width: 60%;
-  }
-
-  .lg\:w-2\/5{
-    width: 40%;
-  }
-
   .lg\:w-1\/4{
     width: 25%;
   }
@@ -1077,28 +1015,11 @@ input, select, textarea, ::placeholder {
   .lg\:w-3\/4{
     width: 75%;
   }
-
-  .lg\:max-w-7xl{
-    max-width: 80rem;
-  }
-
-  .lg\:overflow-hidden{
-    overflow: hidden;
-  }
 }
 
 @media (min-width: 1440px){
-  .xl\:my-8{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
-  .xl\:w-2\/6{
-    width: 33.333333%;
-  }
-
-  .xl\:overflow-hidden{
-    overflow: hidden;
+  .xl\:h-screen{
+    height: 100vh;
   }
 }
 
